--- a/shakespeare.css
+++ b/shakespeare.css
@@ -4,7 +4,7 @@
     color: black;
 }
 
-.stage-direction:hover {
+.stage-direction {
     font-family: "Courier New", Times, serif;
     font-size: 12pt;
     color: black;
@@ -36,4 +36,27 @@
     font-family: "Garamon", Times, serif;
     font-size: 13pt;
     color: rgb(214, 53, 24);
+}
+
+table {
+    width: 500px;
+    border-collapse: collapse;
+}
+
+th {
+    background-color: #eee016;
+    color: darkslategrey;
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+td {
+    padding: 8px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
 }
